Bug 1398458 - Ensure we don't leave null gfxFontEntry records in a formerly 'simple' gfxFontFamily when adding extra faces. r=heycam